# IA-sante

./: README.md  pyproject.toml
.github/: copilot-instructions.md
data/: clinical_data_pbc_cleaned.csv
src/: NLLsurv.py  __init__.py  config.py  correct_data.py  main.py  metric.py  model.py  prep_data_model.py  process_data.py  test.py  training.py
src/project_sante/: __init__.py  main.py
