[project]
name = "project-sante"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hossein", email = "seyedi.seyed-hossein@etu.unice.fr" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch>=2.9.1",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
